# dicerealms-python

./: CHANGES.md  MILESTONES.md  Make  Makefile  README.md  ROADMAP.md  gap.sh  main.py  pyproject.toml  test_client.py  test_turn_manager.py
.github/workflows/: ci.yml
dicerealms/: __init__.py  __main__.py  cli.py  commands.py  console_frontend.py  core.py  engine.py  player.py  session.py  world.py
dicerealms/client/: __init__.py  client.py  input_handler.py  ui.py
dicerealms/protocol/: __init__.py  messages.py
dicerealms/server/: __init__.py  action_processor.py  game_state.py  server.py  turn_manager.py
dicerealms/ui/: __init__.py  single_player_ui.py
docs/: PROJECT_STATE.md
docs/milestones/: M1.md  M2.md  M3.md  M4.md  M5.md  M6.md
examples/: quickstart.py
tests/: test_action_processor.py  test_cli.py  test_client.py  test_commands.py  test_console_frontend.py  test_core.py  test_core_enhanced.py  test_engine.py  test_engine_enhanced.py  test_game_state.py  test_integration.py  test_main.py  test_player.py  test_server.py  test_session.py  test_single_player_ui.py  test_turn_manager.py  test_world.py  test_world_enhanced.py
