[project]
name = "dicerealms"
version = "0.1.0"
description = "Python powered DiceRealms game engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name="Eric Harris", email="ericktheredd5875@gmail.com" }
]
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "ruff>=0.12.9",
    "typer>=0.16.1",
]

[project.urls]
Homepage = "https://github.com/ericktheredd5875/dicerealms-python"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-pretty>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enable commonly useful rules
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
]

ignore = [
    "E501",  # line length handled by formatter
]
