[project]
name = "dicerealms"
version = "0.1.0"
description = "Python powered DiceRealms game engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name="Eric Harris", email="ericktheredd5875@gmail.com" }
]
dependencies = [
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "ruff>=0.12.9",
    "typer[all]>=0.16.1",
]

[project.scripts]
dicerealms = "dicerealms.cli:app"
dicerealms-old = "dicerealms.__main__:app"

[project.urls]
Homepage = "https://github.com/ericktheredd5875/dicerealms-python"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "pytest-pretty>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

#[tool.pytest.ini_options]
#addopts = "-q"
#pythonpath = ["."]
#testpaths = ["tests"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["dicerealms"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["E","F","I","UP","B"]

#[tool.ruff.lint]
# Enable commonly useful rules
#select = [
#    "E",  # pycodestyle errors
#    "F",  # pyflakes
#    "I",  # import sorting
#    "B",  # bugbear
#]

lint.ignore = [
    "E501",  # line length handled by formatter
]
exclude = [
    "**/tests",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
#tests = ["B201", "B301"]
#skips = ["B101", "B601"]